tests/baselines/reference/derivedClassWithoutExplicitConstructor.errors.txt
==== tests/cases/compiler/derivedClassWithoutExplicitConstructor.ts (4 errors) ====
    class Base {
        a = 1;
        constructor(x: number) { this.a = x; }
    }
    
    class Derived extends Base {
        x = 1
        y = 'hello';
    }
    
    var r = new Derived(); // error
                ~~~~~~~
!!! derivedClassWithoutExplicitConstructor.ts(11,13): error TS2081: Supplied parameters do not match any signature of call target.
                ~~~~~~~
!!! derivedClassWithoutExplicitConstructor.ts(11,13): error TS2085: Could not select overload for 'new' expression.
    var r2 = new Derived(1); 
    
    class Base2<T> {
        a: T;
        constructor(x: T) { this.a = x; }
    }
    
    class D<T extends Date> extends Base2<T> {
        x = 2
        y: T = null;
    }
    
    var d = new D(); // error
                ~
!!! derivedClassWithoutExplicitConstructor.ts(24,13): error TS2081: Supplied parameters do not match any signature of call target.
                ~
!!! derivedClassWithoutExplicitConstructor.ts(24,13): error TS2085: Could not select overload for 'new' expression.
    var d2 = new D(new Date()); // ok